crates/executor/src/tests/s3_tables/snapshots/create_schema.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: CREATE SCHEMA embucket.tests_second
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
