crates/executor/src/tests/s3_tables/snapshots/create_schema_if_not_exists.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: CREATE SCHEMA IF NOT EXISTS embucket.tests
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
