crates/executor/src/tests/s3_tables/snapshots/create_table.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: "CREATE TABLE embucket.tests.third (id INT, name VARCHAR)"
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
