crates/executor/src/tests/s3_tables/snapshots/create_table_if_not_exists.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: "CREATE TABLE IF NOT EXISTS embucket.tests.first (id INT, name VARCHAR, category STRING)"
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
