crates/executor/src/tests/s3_tables/snapshots/create_table_or_replace.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: "CREATE OR REPLACE TABLE embucket.tests.second (id INT, name VARCHAR, category STRING)"
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 0     |",
        "+-------+",
    ],
)
