crates/executor/src/tests/s3_tables/snapshots/drop_schema.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: DROP SCHEMA embucket.tests_second
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
