crates/executor/src/tests/s3_tables/snapshots/drop_table.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: DROP TABLE embucket.tests.second
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
