crates/executor/src/tests/s3_tables/snapshots/insert.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: query
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 2     |",
        "+-------+",
    ],
)
