crates/executor/src/tests/s3_tables/snapshots/insert_first.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: "INSERT INTO embucket.tests.first VALUES (1, 'old', 'A'), (2, 'keep', 'B')"
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 2     |",
        "+-------+",
    ],
)
