crates/executor/src/tests/s3_tables/snapshots/insert_second.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: "INSERT INTO embucket.tests.second VALUES (1, 'updated', 'A'), (3, 'inserted', 'C')"
---
Ok(
    [
        "+-------+",
        "| count |",
        "+-------+",
        "| 2     |",
        "+-------+",
    ],
)
